
[tool.poetry]
name = "minisd"
version = "0.1.0"
description = ""
authors = ["__mo_san__ <moboustt@student.1337.ma>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
anyio = "3.6.2"
appnope = "0.1.3"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.2.3"
asttokens = "2.2.1"
astunparse = "1.6.3"
async-timeout = "4.0.3"
attrs = "22.2.0"
backcall = "0.2.0"
beautifulsoup4 = "4.11.2"
bleach = "6.0.0"
Box2D = "2.3.2"
box2d-py = "2.3.5"
build = "0.10.0"
CacheControl = "0.13.1"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
cleo = "2.0.1"
click = "8.1.7"
cloudpickle = "2.2.1"
comm = "0.1.2"
contourpy = "1.1.0"
crashtest = "0.4.1"
cycler = "0.11.0"
datasets = "2.14.5"
debugpy = "1.6.6"
decorator = "5.1.1"
defusedxml = "0.7.1"
dill = "0.3.7"
distlib = "0.3.7"
dulwich = "0.21.6"
execnb = "0.1.5"
executing = "1.2.0"
Farama-Notifications = "0.0.4"
fastcore = "1.5.28"
fastjsonschema = "2.16.3"
filelock = "3.12.3"
flake8 = "6.1.0"
fonttools = "4.42.1"
fqdn = "1.5.1"
frozenlist = "1.4.0"
fsspec = "2023.6.0"
ghapi = "1.0.3"
gymnasium = "0.28.1"
huggingface-hub = "0.17.1"
huggingface-sb3 = "3.0"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
ipykernel = "6.21.2"
ipython = "8.11.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.0.4"
isoduration = "20.11.0"
jax-jumpy = "1.0.0"
jedi = "0.18.2"
Jinja2 = "3.1.2"
joblib = "1.3.2"
jsonargparse = "4.24.0"
jsonpointer = "2.3"
jsonschema = "4.17.3"
jupyter = "1.0.0"
jupyter-console = "6.6.2"
jupyter-events = "0.6.3"
jupyter_client = "8.0.3"
jupyter_core = "5.2.0"
jupyter_server = "2.3.0"
jupyter_server_terminals = "0.4.4"
jupyterlab-pygments = "0.2.2"
jupyterlab-widgets = "3.0.5"
keyring = "24.2.0"
kiwisolver = "1.4.5"
MarkupSafe = "2.1.2"
matplotlib = "3.7.3"
matplotlib-inline = "0.1.6"
mccabe = "0.7.0"
mistune = "2.0.5"
more-itertools = "10.1.0"
mpmath = "1.3.0"
msgpack = "1.0.7"
multidict = "6.0.4"
multiprocess = "0.70.15"
nbclassic = "0.5.2"
nbclient = "0.7.2"
nbconvert = "7.2.9"
nbdev = "2.3.12"
nbformat = "5.7.3"
nest-asyncio = "1.5.6"
networkx = "3.1"
nltk = "3.8.1"
notebook = "6.5.2"
notebook_shim = "0.2.2"
numpy = "1.25.2"
opencv-python = "4.8.0.76"
packaging = "23.0"
pandas = "2.1.0"
pandocfilters = "1.5.0"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
Pillow = "10.0.0"
pkginfo = "1.9.6"
platformdirs = "3.10.0"
poetry = "1.6.1"
poetry-core = "1.7.0"
poetry-plugin-export = "1.5.0"
prometheus-client = "0.16.0"
prompt-toolkit = "3.0.38"
psutil = "5.9.4"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyarrow = "13.0.0"
pybind11 = "2.11.1"
pycairo = "1.23.0"
pycodestyle = "2.11.0"
pycparser = "2.21"
pyflakes = "3.1.0"
pygame = "2.1.3"
Pygments = "2.14.0"
pyparsing = "3.1.1"
pyproject_hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
python-json-logger = "2.0.7"
pytz = "2023.3.post1"
PyYAML = "6.0"
pyzmq = "25.0.0"
qtconsole = "5.4.0"
QtPy = "2.3.0"
rapidfuzz = "2.15.1"
regex = "2023.8.8"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
safetensors = "0.3.3"
scikit-learn = "1.3.0"
SciPy = "1.11.1"
seaborn = "0.12.2"
Send2Trash = "1.8.0"
sentencepiece = "0.1.99"
shellingham = "1.5.3"
six = "1.16.0"
sniffio = "1.3.0"
soupsieve = "2.4"
stable-baselines3 = "2.0.0a5"
stack-data = "0.6.2"
swig = "4.1.1"
sympy = "1.12"
tabulate = "0.9.0"
terminado = "0.17.1"
threadpoolctl = "3.2.0"
tinycss2 = "1.2.1"
tokenizers = "0.13.3"
tomlkit = "0.12.1"
torch = "2.0.1"
tornado = "6.2"
tqdm = "4.66.1"
traitlets = "5.9.0"
transformers = "4.33.3"
trove-classifiers = "2023.9.19"
typing_extensions = "4.7.1"
tzdata = "2023.3"
uri-template = "1.2.0"
urllib3 = "2.0.4"
virtualenv = "20.24.5"
wasabi = "1.1.2"
watchdog = "2.3.1"
wcwidth = "0.2.6"
webcolors = "1.12"
webencodings = "0.5.1"
websocket-client = "1.5.1"
widgetsnbextension = "4.0.5"
xattr = "0.10.1"
xxhash = "3.3.0"
yarl = "1.9.2"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
